# ttpi415

./: README.md  README_tt_deep_rl.md  analyze_cartpole_q_tensor.py  analyze_tt_rank.py  build_value_q_adv_tensors.py  cartpole_discretizer.py  cartpole_dqn_fixed_result.json  cartpole_q_diag.json  dqn_hybrid.json  dqn_mlp.json  dqn_tt.json  export_rollouts.py  ppo_mlp_50k.pt  ppo_mlp_50k_returns_rank.json  ppo_mlp_50k_rollouts.json  ppo_mlp_50k_rollouts.npz  ppo_mlp_50k_stochastic_returns_rank.json  ppo_mlp_50k_stochastic_rollouts.json  ppo_mlp_50k_stochastic_rollouts.npz  ppo_mlp_50k_stochastic_td_rank.json  ppo_mlp_50k_stochastic_vqa_returns.json  ppo_mlp_50k_stochastic_vqa_returns.npz  ppo_mlp_50k_stochastic_vqa_td.json  ppo_mlp_50k_stochastic_vqa_td.npz  ppo_mlp_50k_td_rank.json  ppo_mlp_50k_train.json  ppo_mlp_50k_vqa_returns.json  ppo_mlp_50k_vqa_returns.npz  ppo_mlp_50k_vqa_td.json  ppo_mlp_50k_vqa_td.npz  pyproject.toml  run_cartpole_ppo_critic_sweep.py  stage1_random_rank.json  stage1_random_rollouts.json  stage1_random_rollouts.npz  stage1_random_vqa.json  stage1_random_vqa.npz  stage1_random_weighted_rank.json  torch_mpo_quick_demo.py  train_dqn.py  (+1 more)
cartpole_ppo_critic_sweep/: manifest.json  summary.csv  summary.json
cartpole_ppo_critic_sweep/checkpoints/: cartpole_v1_ppo_actor-mlp_critic-mlp_rank-na_steps-50000_seed-7.pt  (+69 more)
cartpole_ppo_critic_sweep_cuda/: manifest.json  summary.csv  summary.json
tt_deep_rl/: __init__.py  cartpole_diagnostics.py  dqn.py  networks.py  ppo.py  svg_plots.py  tt_layers.py
ttpi_new.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+210 files in other folders)
