[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ttpi-new"
version = "0.1.0"
description = "Minimal TT + deep RL research scaffold."
readme = "README_tt_deep_rl.md"
requires-python = ">=3.9"
dependencies = [
  "gymnasium",
  "numpy",
  "torch",
]

[tool.setuptools]
packages = ["tt_deep_rl"]
